<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_cep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/cadastro_cep" />

        <Spinner
            android:id="@+id/input_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/estados"
            android:layout_marginTop="5dp"
            android:hint="@string/cadastro_estado"/>

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/cadastro_cidade"/>

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_bairro"/>

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_logradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_logradouro" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_numero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_numero" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_complemento"/>

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_atualizarDdaos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#5289FB"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/cadastro_atualizarDados"/>
    </LinearLayout>
</ScrollView>