<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/cadastro_nome" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_nameusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_nomeusuario" />

        <!-- Email Label -->
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/cadastro_email" />

        <!-- Phone Label -->
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/cadastro_telefone"/>

        <!-- Password Label -->
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/cadastro_senha"/>

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="#5289FB"
            android:textColor="@color/md_white_1000"
            android:text="@string/cadastro_criar"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/cadastro_membrologin"
            android:onClick="doLogin"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>