<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/detalhesnomejogo"
            android:textSize="20dip"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/detalhesNomeJogo" />


        <TextView
            android:id="@+id/detalhescategoriajogo"
            android:textSize="20dip"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/detalhesCategoriaJogo"/>

        <TextView
            android:id="@+id/detalhesanojogo"
            android:textSize="20dip"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detalhesAnoJogo"/>

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detalhesdescricaojogo"
                android:textSize="20dip"
                android:layout_marginTop="10dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detalhesDescricaoJogo"/>

        </ScrollView>

    </LinearLayout>
</ScrollView>