<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">


            <ImageView
                android:id="@+id/imgJogoTroca"
                android:layout_width="80dip"
                android:layout_height="80dip" />

            <LinearLayout
                android:id="@+id/teste"
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1.05">

                <TextView
                    android:id="@+id/nomeJogoTroca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nomejogotroca"
                    android:textColor="#343434"
                    android:textSize="12sp"
                    android:layout_below="@+id/plataformaJogo"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:layout_toEndOf="@+id/thumbnail"/>

                <TextView
                    android:id="@+id/nomeJogoOferta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:text="@string/nomejogooferta"
                    android:textColor="#040404"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/statustroca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:text="@string/statustroca"
                    android:textColor="#040404"
                    android:textSize="10dp"
                    android:typeface="sans" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dip"
                    android:layout_height="20dip">

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true" />

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="10dip"
                        android:id="@+id/imageView2"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgJogoOferta"
                    android:layout_width="75dp"
                    android:layout_height="match_parent" />


            </LinearLayout>

         </LinearLayout>

    </LinearLayout>


</RelativeLayout>


